--- a/web-sample/public/index.html
+++ b/web-sample/public/index.html
@@ -22,18 +22,8 @@
             </div>
             
             <div class="form-group">
-                <label for="country">Country:</label>
-                <select id="country" name="country" required>
-                    <option value="">Select a country</option>
-                    <option value="USA">United States</option>
-                    <option value="Canada">Canada</option>
-                    <option value="UK">United Kingdom</option>
-                    <option value="Australia">Australia</option>
-                    <option value="Germany">Germany</option>
-                    <option value="France">France</option>
-                    <option value="Japan">Japan</option>
-                    <option value="Other">Other</option>
-                </select>
+                <label for="name">Country:</label>
+                <input type="text" id="country" name="country" required>
             </div>
             
             <button type="submit" class="btn">Submit</button>
